test/libsolidity/syntaxTests/array/length/invalid_expression_2.sol
contract C {
    uint[true/1] ids;
}
// ----
// TypeError 5462: (22-28): Invalid array length, expected integer literal or constant expression.
